# softeng_module

./: .readthedocs.yaml  20230_11_06_requests.py  Dockerfile  Jenkinsfile  PanelAppDB.py  PannelAppDB.py  README.md  README.rst  USERGUIDE.md  environment.yml  panel_app_db.py  pyproject.toml
docs/: Installation.md  User_Guide.md  api.rst  conf.py  database.rst  index.rst  install.rst  requirements.txt  usage.rst
docs/source/: conf.py  index.rst
src/: .JSON_eg.json.swp  .JSON_parsing.py.swp  API_test.json  Database.sql  GenePanelRepo.db  Gene_json_eg.ipynb  JSON_parsing.py  JSON_parsing_OLD.py  api.py  cli.py  database.py  database_1.1.py  database_2.0.py  database_3.0.py  database_3_0.py  json_parsing.py  logging.py  logging_1.0.py  tests.py
test/: JSON_parsing_test.py  JSON_test_data.json  JSON_test_data2.json  api_test.py  cli_test.py  database_3.0_test.py  database_3_0_test.py  json_parsing_test.py  logging_test.py  signed_off_gms.json
